[EagerAppCDS] add cds+quickstart ci on github and fix testcase
Summary:

Test Plan: ci jtreg cds+quickstart

Reviewed-by: lingjun-cg, yuleil